--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guía Asetto Corsa</title>
+    <title>Como iniciar en Asetto Corsa Competizione</title>
     <link rel="stylesheet" href="salvacss.css">
+    <meta name="description" content="Aprende a controlar tu coche favorito en asetto corsa competizione y a mejorar tus tiempos">
+    <meta name="keywords" content="asetto, asetto corsa, como hacer setup a tu coche en asetto corsa, mejor coche asetto corsa competizione,">
 </head>
 <body>
     <header>
@@ -15,7 +17,7 @@
               <li><a href="#Setups">Setups</a></li> 
                 <li><a href="#Coches">Coches</a></li> 
                   <li><a href="#Circuitos">Circuitos</a></li> 
-                  <li>deivison no me mires</li>
+                  <li>deivison con tenia</li>
                 <li><a href="#Tecnicas">Técnicas de Conducción</a></li>
                 <ul>
                     <li>Trail Braking</li>
