--- a/coches.html
+++ b/coches.html
@@ -21,7 +21,7 @@
             <h2>Que coches hay en el juego</h2>
           <article>
             <h2>BMW M4 GT3 CS</h2>
-           <img src="sexo.jpg" alt="BMW">
+           <img src="imagenes/bmw.jpg" alt="BMW">
           </article>
           <article>
             <H2>Audi r8 LMS GT3 EVO II</H2>
