--- a/coches.html
+++ b/coches.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <h1>GT3</h1>
+        <h1>Cómo funcionan los Coches y cuáles hay</h1>
     </header>
 
     <section>
@@ -31,6 +31,8 @@
                         <p>Tracción trasera</p>
                         <p>Motor 6 cilindros 3.0 litros</p>
                         <p>Coche muy equilibrado gracias a su reparto de peso del 50%-50%, con un buen setup puede ser de los mas comppetitivos, tiende a  subvirar en curva lenta debido al peso delantero y a su motor delantero</p>
+                         <p>Sonido en Cabina:</p>
+                        <audio controls src="Audios/bmw sonido.mp3" type="audio/mpeg"></audio>
                     </div>
                 </div>
             </article>
@@ -48,6 +50,7 @@
                         <p>Motor central</p>
                         <p>Tracción trasera</p>
                         <p>Coche muy sobrevirador pero que si tienes control con él va a ser muy rápido, en curva lenta funciona muy bien y tiene una de las mejores velocidades punta.Tiene una electronica dificil de equilibrar respecto a otros coches, uno de los que mejores suena en cabina debido a su V10</p>
+                    
                     </div>
                 </div>
             </article>
@@ -65,7 +68,11 @@
                         <p>Motor trasero</p>
                         <p>Tracción trasera</p>
                         <p>Coche muy utilizado por la gente en online ya sea por su fama,sonido y jugabilidad, destaca por su motor trasero que lo convierte en un coche muy sobrevirador pero que en curva rapida es los mejores, tiene un frenada que si no la sabes controlar bien pierdes tiempo, uno de los mejores coches del juego.</p>
+                         <p>Sonido en Cabina:</p>
+                        <audio controls src="Audios/porschesonido.mp3" type="audio/mpeg"></audio>
                     </div>
+
+
                 </div>
             </article>
 
@@ -82,6 +89,8 @@
                         <p>Motor central</p>
                         <p>Tracción trasera</p>
                         <p>Con su motor central V6 es uno de los motores mas pequeños que hay en su competición pero esto no quiere decir que sea lento ya que en marchas altas es uno de los más rapidos, va bien por curva y subvira poco, buena gestión de ruedas, una de sus pegas es que su frenada no es tan perfecta y tiende a sobrecalentar frenos </p>
+                     <p>Sonido en Cabina:</p>
+                        <audio controls src="Audios/ferrari sonido.mp3" type="audio/mpeg"></audio>
                     </div>
                 </div>
             </article>
@@ -99,6 +108,8 @@
                         <p>Motor delantero</p>
                         <p>Tracción trasera</p>
                         <p>Coche muy rápido en velocidad punta debido a su aereodinámica, muy subvirador debido a su motor central y al morro que tiene, en el juego tienes que ajustar la camara debido al morro tan largo que tiene, es un coche dificil de usar, actualmente no es de los mejores en el juego</p>
+                    <p>Sonido en Cabina:</p>
+                        <audio controls src="Audios/mercedes sonido.mp3" type="audio/mpeg"></audio>
                     </div>
                 </div>
             </article>
@@ -133,6 +144,8 @@
                         <p>Motor delantero</p>
                         <p>Tracción trasera</p>
                         <p>Ultimo GT3 que salio en el juego, o lo odias o lo amas, es un coche subvirador por su motor delantero y con falta de velocidad punta, tiene un buen paso por pianos debido a su chasis</p>
+                    <p>Sonido en Cabina:</p>
+                        <audio controls src="Audios/mustang sonido.mp3" type="audio/mpeg"></audio>
                     </div>
                 </div>
             </article>
@@ -150,6 +163,8 @@
                         <p>Motor delantero</p>
                         <p>Tracción trasera</p>
                         <p>Coche subvirador por su motor delantero y con un buen paso por curva, le puede faltar algo de velocidad punta y tiene un sonido muy caracteristico</p>
+                    <p>Sonido en Cabina:</p>
+                        <audio controls src="Audios/aston sonido.mp3" type="audio/mpeg"></audio>
                     </div>
                 </div>
             </article>
@@ -167,6 +182,8 @@
                         <p>Motor central</p>
                         <p>Tracción trasera</p>
                         <p>El coche mas utilizado en el competitivo ahora mismo, coche muy equilibrado es un 8 en todo, buen agarre, buena gestión de gomas, velocidad punta buena, muy poco subvirador, tiende a sobrevirar en ciertas ocasiones, se podría decir facil que es el mejor coche del juego</p>
+                   <p>Sonido en Cabina:</p>
+                        <audio controls src="Audios/mclaren sonido.mp3" type="audio/mpeg"></audio>
                     </div>
                 </div>
             </article>
@@ -183,7 +200,9 @@
                         <p>1.270 kg</p>
                         <p>Motor central</p>
                         <p>Tracción trasera</p>
-                        <p>Este coche no esta en el ACC pero voy hablar de el debido a que sacaron su versión GT3 y esta corriendo en el WEC con buenos resultados, es un coche con una muy buena velocidad punta y un paso por curva lenta excepcional, buena frenada y sonido, coche muy sobrevirador  </p>
+                        <p>Eun coche con una muy buena velocidad punta y un paso por curva lenta excepcional, buena frenada y sonido, coche muy sobrevirador</p>
+                        <p>Sonido en Cabina:</p>
+                        <audio controls src="Audios/corvettesonido.mp3" type="audio/mpeg"></audio>
                     </div>
                 </div>
             </article>
