--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Como Empezar en Lemans Ultimate</title>
     <link rel="stylesheet" href="salvacss.css">
-    <meta name="description" content="Aprende a controlar tu coche favorito en asetto corsa competizione y a mejorar tus tiempos">
-    <meta name="keywords" content="asetto, asetto corsa, como hacer setup a tu coche en asetto corsa, mejor coche asetto corsa competizione,">
+    <meta name="description" content="Aprende a controlar tu coche favorito en lemans ultimate y a mejorar tus tiempos">
+    <meta name="keywords" content="Lmu, Lemans Ultimate, como hacer setup a tu coche en Lemans Ultimate, mejor coche de Lemans Ultimate, ,">
+    <link rel="canonical" href="https://salvador-macian.github.io/">
+    <link rel="icon" href="imagenes/favicon.ico">
 </head>
 <body>
     <header>
