--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Aprende a controlar tu coche favorito en lemans ultimate y a mejorar tus tiempos">
     <meta name="keywords" content="Lmu, Lemans Ultimate, como hacer setup a tu coche en Lemans Ultimate, mejor coche de Lemans Ultimate, ,">
     <link rel="canonical" href="https://salvador-macian.github.io/">
-    <link rel="icon" href="imagenes/favicon.ico">
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
     <header>
@@ -61,7 +61,7 @@
                 <div class="carta">
                     <div class="frente">
                         <h3>Configuración de Coche</h3>
-                    <div><a href="setupsconf.html" target="_blank"> <img src="imagenes/setup44.png" alt="coches"> </a></div> 
+                    <div><a href="setupsconf.html" target="_blank"> <img src="imagenes/goma.PNG" alt="coches"> </a></div> 
                         
                     </div>
                      </article>
