--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="canonical" href="https://salvador-macian.github.io/">
     <link rel="icon" href="favicon.ico">
     <meta name="robots" content="index,follow">
+    <meta property="og:title" content="Título para redes sociales">
+<meta property="og:description" content="Descripción para redes sociales">
+<meta property="og:image" content="image.jpg">
+<meta property="og:url" content="https://www.dominio.com">
 </head>
 <body>
     <header>
@@ -22,7 +26,8 @@
                 <li>Coches</a></li> 
                   <li>Circuitos</a></li> 
                 <li>Técnicas de Conducción</a></li>
-                <li>Páginas de Interes</li>
+                <li> <a href="enlacessalva.html">Páginas de Interes</a></li>
+                
                     
             </ol>
         </nav>
