--- a/coches.html
+++ b/coches.html
@@ -40,7 +40,7 @@
             <article class="coche">
                 <div class="carta">
                     <div class="frente">
-                        <img src="imagenes/r88.jpg" alt="Audi">
+                        <img src="imagenes/r88.webp" alt="Audi">
                         <h3>Audi R8 LMS GT3 EVO II</h3>
                     </div>
                     <div class="detras">
@@ -58,7 +58,7 @@
             <article class="coche">
                 <div class="carta">
                     <div class="frente">
-                        <img src="imagenes/kevin.png" alt="Porsche">
+                        <img src="imagenes/kevin.webp" alt="Porsche">
                         <h3>Porsche 992 GT3 R</h3>
                     </div>
                     <div class="detras">
@@ -79,7 +79,7 @@
             <article class="coche">
                 <div class="carta">
                     <div class="frente">
-                        <img src="imagenes/Captura de pantalla 2025-10-15 205820.png" alt="Ferrari">
+                        <img src="imagenes/Captura de pantalla 2025-10-15 205820.webp" alt="Ferrari">
                         <h3>Ferrari 296 GT3</h3>
                     </div>
                     <div class="detras">
@@ -98,7 +98,7 @@
             <article class="coche">
                 <div class="carta">
                     <div class="frente">
-                        <img src="imagenes/mercedes.jpg" alt="Mercedes">
+                        <img src="imagenes/mercedes.webp" alt="Mercedes">
                         <h3>Mercedes-AMG GT3</h3>
                     </div>
                     <div class="detras">
@@ -134,7 +134,7 @@
             <article class="coche">
                 <div class="carta">
                     <div class="frente">
-                        <img src="imagenes/mustang.jpg" alt="Mustang">
+                        <img src="imagenes/mustang.webp" alt="Mustang">
                         <h3>Mustang GT3</h3>
                     </div>
                     <div class="detras">
@@ -172,7 +172,7 @@
             <article class="coche">
                 <div class="carta">
                     <div class="frente">
-                        <img src="imagenes/59.jpg" alt="McLaren">
+                        <img src="imagenes/59.webp" alt="McLaren">
                         <h3>McLaren 720S GT3 EVO II</h3>
                     </div>
                     <div class="detras">
@@ -191,7 +191,7 @@
             <article class="coche">
                 <div class="carta">
                     <div class="frente">
-                        <img src="imagenes/corvettez06.jpg" alt="Corvette">
+                        <img src="imagenes/corvettez06.webp" alt="Corvette">
                         <h3>Corvette Z06 GT3</h3>
                     </div>
                     <div class="detras">
@@ -210,7 +210,7 @@
             <article class="coche">
                 <div class="carta">
                     <div class="frente">
-                        <img src="imagenes/LEXUS.jpg" alt="Lexus">
+                        <img src="imagenes/LEXUS.webp" alt="Lexus">
                         <h3>Lexus RC F LMGT3</h3>
                     </div>
                     <div class="detras">
@@ -227,7 +227,7 @@
             <article class="coche">
                 <div class="carta">
                     <div class="frente">
-                        <img src="imagenes/nissan.jpg" alt="Nissan">
+                        <img src="imagenes/nissan.webp" alt="Nissan">
                         <h3>Nissan GT-R Nismo GT3</h3>
                     </div>
                     <div class="detras">
