--- a/productossim.html
+++ b/productossim.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tipos de Coches</title>
+    <title>Componentes Simracing</title>
     <link rel="stylesheet" href="simracing.css">
     <header> <h1>Componentes de SimRacing</h1>
     </header>
